Made project a bit flexible then before by using interfaces
